prevent long fields from overflowing preview tab

--- a/src/resources/module/styles/dialogs/schema-alignment-dialog.css
+++ b/src/resources/module/styles/dialogs/schema-alignment-dialog.css
@@ -144,7 +144,7 @@ div.snac-schema-alignment-dialog-preview {
   background: white;
   padding: 10px;
   margin-top: 3px;
-  white-space: pre;
+  white-space: pre-wrap;
   font-size: 9pt;
 }
 
